# committy

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  install.sh
.github/: changelog-config.json
.github/workflows/: cargo-release.yml  lint.yml  npm-release.yml  release.yml  rust.yml
docs/: README.md  astro.config.mjs  bun.lockb  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: installation.mdx  what-is-committy.mdx
docs/src/content/docs/project/: contributing.mdx  license.mdx  roadmap.mdx
docs/src/content/docs/reference/: ai-flags.mdx  amend.mdx  commit.mdx  group-commit.mdx  lint.mdx  mcp.mdx  tag.mdx  update.mdx
mcp-server-committy/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
mcp-server-committy/scripts/: fake-committy.mjs  test.mjs
mcp-server-committy/src/: commit_groups.ts  committy.ts  git.ts  index.ts
src/: config.rs  error.rs  lib.rs  main.rs  update.rs
src/ai/: mod.rs
src/cli/: mod.rs
src/cli/commands/: amend.rs  branch.rs  commit.rs  group_commit.rs  lint.rs  lint_message.rs  mod.rs  tag.rs  tui.rs
src/git/: branch.rs  commit.rs  mod.rs  repository.rs  tag.rs  tag_unit.rs
src/input/: mod.rs  prompts.rs  validation.rs
src/linter/: mod.rs
src/logger/: mod.rs
src/release/: mod.rs
src/telemetry/: mod.rs  posthog.rs
src/tui/: app.rs  event.rs  mod.rs  state.rs
src/tui/ui/: commit_form.rs  file_list.rs  group_view.rs  help.rs  mod.rs
src/version/: mod.rs
tests/: git_tests.rs  group_commit_tests.rs  input_tests.rs  integration_tests.rs  lint_message_cli_tests.rs  main_tests.rs  repository_tests.rs  tag_tests.rs  tag_version_bump_tests.rs  test_linter.rs  tui_commit_form_tests.rs  tui_filtering_grouping_tests.rs  tui_staging_tests.rs  tui_state_tests.rs  version_bump_tests.rs  version_tests.rs
tests/common/: mod.rs
