[package]
name = "committy"
version = "1.3.0-beta.1"
authors = ["Arnaud (Martient) Leherpeur <arnaud.leherpeur@taultek.com>"]
edition = "2021"
description = "🚀 Generate clear, concise, and structured commit messages effortlessly"
repository = "https://github.com/martient/committy"
license-file = "LICENSE"
include = ["/src", "LICENSE"]


[dependencies]
structopt = "0.3.26"
inquire = "0.7.5"
git2 = { version = "0.20.0", features = ["vendored-openssl"] }
thiserror = "2.0.9"
anyhow = "1.0.95"
sentry = "0.36.0"
chrono = "0.4.39"
semver = "1.0.24"
regex = "1.11.1"
log = "0.4.22"
env_logger = "0.11.6"
strsim = "0.11.1"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
    "archive-zip",
] }
tokio = { version = "1.42.0", features = ["full"] }
colored = "3.0.0"
indicatif = "0.17.7"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.15.0"
mockall = "0.13.1"
