[package]
name = "committy"
version = "1.5.0"
authors = ["Arnaud (Martient) Leherpeur <arnaud.leherpeur@taultek.com>"]
edition = "2021"
description = "🚀 Generate clear, concise, and structured commit messages effortlessly"
repository = "https://github.com/martient/committy"
license-file = "LICENSE"
include = ["/src", "LICENSE"]


[dependencies]
structopt = "0.3.26"
inquire = "0.7.5"
git2 = { version = "0.20.0", features = ["vendored-openssl"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
sentry = "0.36.0"
chrono = { version = "0.4.39", features = ["serde"] }
semver = "1.0.24"
regex = "1.11.1"
log = "0.4.25"
env_logger = "0.11.6"
strsim = "0.11.1"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
    "archive-zip",
] }
colored = "3.0.0"
indicatif = "0.17.9"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
dirs = "6.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
mockall = "0.13.1"
uuid = {version = "1.12.0", features = ["v4"]}
