[package]
name = "committy"
version = "1.5.3"
authors = ["Arnaud (Martient) Leherpeur <arnaud.leherpeur@taultek.com>"]
edition = "2021"
description = "🚀 Generate clear, concise, and structured commit messages effortlessly"
repository = "https://github.com/martient/committy"
license-file = "LICENSE"
include = ["/src", "LICENSE"]


[dependencies]
structopt = "0.3.26"
inquire = "0.7.5"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
sentry = "0.42.0"
chrono = { version = "0.4.41", features = ["serde"] }
semver = "1.0.24"
regex = "1.11.1"
log = "0.4.25"
env_logger = "0.11.6"
strsim = "0.11.1"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
    "archive-zip",
] }
colored = "3.0.0"
indicatif = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
tokio = { version = "1.47.1", features = ["full"] }
once_cell = "1.21.3"
uuid = {version = "1.18.0", features = ["v4"]}
async-trait = "0.1.83"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.21.0"
mockall = "0.13.1"
once_cell = "1.21.3"
serial_test = "3.2.0"

